--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
         <select data-testid="select-sort" name="Selecione" id="escolhaNacionalidade">
           <option value="vazio">Selecione</option>
           <option value="vazio">Selecione</option>
+          <option value="vazio">Selecione</option>
           <option value="brasileira">Brasileira</option>
           <option value="norteAmericana">Norte-Americana</option>
           <option value="sulafricana">Sul-Africana</option>
