correção das tags "label"

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <main>
     <nav>
       <div class="caixaTexto">
-        <h2>Aqui você encontra os tópicos mais pesquisados sobre os famosos</h2>
+        <h2>Aqui você encontra os tópicos mais pesquisados sobre os famosos.</h2>
         <br>
         <p>Faça sua escolha selecionando por filtro:</p>
         <!--<span class="titles_length">24 famosos</span> -->
@@ -26,7 +26,7 @@
       <!--sessão dos filtros -->
       <div class="painelEscolhas">
         <section class="painelInteratividade">
-          <label for="filters" id="selecionaFiltro" class="filtros">Nacionalidade:</label>
+          <label for="filtroNacionalidade" id="selecionaFiltro" class="filtros">Nacionalidade:</label>
           <select id="filtroNacionalidade" name="nacionalidade" data-testid="select-filter">
             <option value="Todos" selected="" hidden="" disabled="">Selecione</option>
             <option value="brasileira">Brasileira</option>
@@ -66,7 +66,7 @@
       
 
         <!--sessão para ordenação-->
-        <label id="ordem">Ordenar por:</label>
+        <label id="filtroOrdem">Ordenar por:</label>
         <select class="filtros" id="filtroOrdem" name="escolherOrdem" data-testid="select-sort">
          <option value="Todos" selected="" hidden="" disabled="">Selecione</option>
          <option value="asc">A - Z</option>
