definição da nova paleta de cores

--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,15 @@
   <body>
     <header>
     <div class="conteúdoCabeçalho">
-      <img class="imagemTopo" src="imagens/celebridadesCapa.jpg" alt="Nome do site: Celebridades">
-      <h1> </h1>
-    </div>
+      <img class="imagemTopo" src="imagens/celebCapa2.png" alt="Nome do site: Celebridades">
+      </div>
   </header>
   
   <main>
     <nav>
       <div class="caixaTexto">
-        <h2>Aqui você encontra os tópicos mais pesquisados sobre os famosos.</h2>
-        <br>
-        <p>Faça sua escolha selecionando por filtro:</p>
-        <!--<span class="titles_length">24 famosos</span> -->
+        <h1>Aqui você encontra os tópicos mais pesquisados sobre os famosos. Faça sua escolha selecionando por filtro.</h1>
+        <!--<span class="titles_length">24 famosos</span> para as métricas -->
       </div>
 
       <!--sessão dos filtros -->
@@ -102,7 +99,7 @@
     </section>
     </main>
             
-    <footer>Criado por <strong>Bia Carneiro</strong> e <strong>Selly Lima</strong>.</footer>
+    <footer>Criado por <strong>Bia Carneiro</strong>.</footer>
 
     <script src="main.js" type="module"></script>
   </body>
