--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,6 @@
   </div>
   <nav>
     <div class="caixaTexto">
-
       <!--<span class="titles_length">24 famosos</span> para as métricas -->
     </div>
 
@@ -42,28 +41,6 @@
           <option value="Paquistanesa">Paquistanesa</option>
         </select>
 
-        <!--
-        <select data-testid="select-sort" name="Selecione" id="areaDeAtuacao">
-          <option value="vazio">Selecione</option>
-          <option value="vazio">Selecione</option>
-          <option value="musica">Música</option>
-          <option value="esportes">Esportes</option>
-          <option value="cinema">Cinema</option>
-          <option value="norteAmericara">Moda</option>
-          <option value="brasileira">Cultura Pop</option>
-          <option value="norteAmericara">Ativismo</option>
-          <option value="brasileira">Ciências e Tecnologia</option>
-        </select>
-
-        <select data-testid="select-sort" name="Selecione" id="curiosidade">
-          <option value="vazio">Selecione</option>
-          <option value="pessoal">Vida Pessoal</option>
-          <option value="profissional">Vida Profissional</option>
-        </select>
-       -->
-
-        <!--repetir o exemplo para os outro filtros-->
-
         <!--sessão para ordenação-->
         <label for="filtroOrdem" id="selecionaOrdem" class="filtros">Ordenar por:</label>
         <select id="filtroOrdem" name="escolherOrdem" data-testid="select-sort">
@@ -76,7 +53,7 @@
 
         <!--criar botão de limpar-->
         <button id="botaoLimpar" data-testid="button-clear">
-          Limpar
+          Limpar seleção
         </button>
       </section>
     </div>
@@ -87,6 +64,7 @@
   </section>
 </body>
 
+<!--footer-->
 <footer>
   <hr>
   <p class="footer-p">Criado por Selly Lima | 2024
